--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.16",
     "@react-navigation/native-stack": "^6.9.22",
-    "expo": "~50.0.8",
+    "expo": "^50.0.0",
     "expo-status-bar": "~1.11.1",
     "firebase": "^10.8.1",
     "react": "18.2.0",
